# TASK-23

./: .gitignore  metadata.json
.tmp/: audit_report-1-fix_check.md  audit_report-1.md  audit_report-2-fix_check.md  audit_report-2.md  delivery_acceptance_project_architecture_audit_2026-04-09.md
docs/: api-spec.md  design.md  questions.md
repo/: .dockerignore  .gitignore  Dioxus.toml  Dockerfile.test  README.md  docker-compose.yml  run_tests.sh
repo/backend/: Dockerfile
repo/backend/src/: api_tests.rs  main.rs
repo/backend/src/db/: analytics.rs  cart.rs  dispatch.rs  exam.rs  orders.rs  products.rs  sessions.rs  store.rs  training.rs  users.rs
repo/backend/src/middleware/: auth_guard.rs  log_mask.rs
repo/database/: test_users.sql
repo/database/migrations/: 006_seed_data.sql
repo/e2e/: Dockerfile  package.json  playwright.config.ts
repo/e2e/tests/: auth.spec.ts  customer-journey.spec.ts  i18n-sitemap.spec.ts  staff-admin.spec.ts
repo/frontend/: Cargo.toml  Dockerfile  index.html  nginx.conf
repo/frontend/assets/: main.css
repo/frontend/src/: lib.rs  logic.rs  main.rs
repo/frontend/src/components/: footer.rs  hold_timer.rs  locale_switcher.rs  navbar.rs  option_selector.rs  price_display.rs  slot_picker.rs  status_badge.rs
repo/frontend/src/pages/: admin.rs  auth.rs  cart.rs  checkout.rs  home.rs  menu.rs  orders.rs  product.rs  staff.rs  training.rs
repo/frontend/src/state/: mod.rs
repo/frontend/tests/: components_test.rs  pages_test.rs  render_test.rs
repo/shared/src/: dto.rs  enums.rs  i18n.rs  models.rs
sessions/: bugfix-1.json
(+15 files in other folders)
